# interverdikom

./: .gitignore  Doxyfile  Features.html  InterVerdiKom.html  Publikationen.html  README.md  Screenshots.html  build.in  configure  configure.ac  feed.xml  index.html  ivk.pro  qmake-config.pro.in
Features_files/: Features.css  Features.js
InterVerdiKom_files/: InterVerdiKom.css  InterVerdiKom.js
Publikationen_files/: Publikationen.css  Publikationen.js
Screenshots_files/: Screenshots.js  rss.xml
doc/: specs.txt  winBuild.txt
doc/help/: wiener_hopf_epsilon.htm
doc/specs/: Export_Table_Graph.odt  Spezifikation_GUI_2.0.odt
doc/uml/: multithreading_concept.zargo
doc/xml_schema/: SMPQueue.dtd  sample.xml
src/ivkapp/: MainWindow.cpp  MainWindow.h  SampleComputation.cpp  SampleComputation.h  main.cpp  qmake-config.pro
src/ivktest/: DFTTest.cpp  DFTTest.h  DiagonalizationTest.cpp  DiagonalizationTest.h  FileImport.cpp  FileImport.h  GaussApproximation.cpp  GaussApproximation.h  ivktest.cpp  qmake-config.pro  test.cpp  test.h
src/libivk/: libivk.pro  qmake-config.pro
src/libivkmodeling/: Doxyfile  Trace.cpp  Trace.h  basicio.cpp  basicio.hpp  diskret.cpp  diskret.hpp  diskretgenetic.cpp  diskretgenetic.hpp  frames.cpp  frames.hpp  geneticmodeling.cpp  geneticmodeling.hpp  genetik.cpp  genetik.hpp  mathe.cpp  mathe.hpp  mmc.cpp  mmc.hpp  mutator.cpp  mutator.hpp  qmake-config.pro  sceneoriented.cpp  sceneoriented.hpp  ssmp.cpp  (+6 more)
testdata/: horizon.data  horizon.ivk  mbike.avi  nw10.mov  sample.snmp  test-horizon.ivk  test_horizon  verifyeig  wtc7_cutter.wmv
(+952 files in other folders)
